Get env vars in to cron

--- a/crons.conf
+++ b/crons.conf
@@ -1,2 +1,2 @@
-9 * * * *  /usr/local/src/drush/drush --root=/var/www/site/docroot/ cron
-*/15 * * * * cd /var/www/site && git pull origin $GIT_BRANCH 
+9 * * * *  . /root/project_env.sh; /usr/local/src/drush/drush --root=/var/www/site/docroot/ cron
+*/15 * * * * . /root/project_env.sh; cd /var/www/site && git pull origin $GIT_BRANCH 
