--- a/supervisord.conf
+++ b/supervisord.conf
@@ -26,6 +26,7 @@ stdout_logfile_maxbytes=0
 
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && rm -f /var/run/apache2/apache2.pid && exec /usr/sbin/apache2 -DFOREGROUND"
+autostart=false
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
