adding more php logging

--- a/php.ini
+++ b/php.ini
@@ -979,7 +979,7 @@ mail.add_x_header = On
 
 ; The path to a log file that will log all mail() calls. Log entries include
 ; the full path of the script, line number, To address and headers.
-;mail.log =
+mail.log = /dev/stderr
 ; Log mail to syslog (Event Log on NT, not valid in Windows 95).
 ;mail.log = syslog
 
