adding timeout for ProxyPass

--- a/wwwsite.conf
+++ b/wwwsite.conf
@@ -29,7 +29,7 @@
 
         CustomLog /dev/stdout combined
 
-        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000${APACHE_DOCROOT}/$1
+        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000${APACHE_DOCROOT}/$1 timeout=180
         DirectoryIndex /index.php index.php
 
 </VirtualHost>
