adding setting for xdebug

--- a/xdebug-php.ini
+++ b/xdebug-php.ini
@@ -1938,3 +1938,4 @@ xdebug.remote_handler=dbgp
 xdebug.remote_host=xdebug
 xdebug.remote_port=9000
 xdebug.remote_autostart=1
+xdebug.max_nesting_level=256
