changing rewrite rules for alb

--- a/wwwsite.conf
+++ b/wwwsite.conf
@@ -4,16 +4,12 @@
 
         RewriteEngine On
 
-        RewriteCond %{HTTP:X-Forwarded-Proto} http [OR]
-        RewriteCond %{HTTPS} !=on
-        RewriteRule ^(.*)$ - [env=proto:http]
-
-        RewriteCond %{HTTP:X-Forwarded-Proto} https [OR]
-        RewriteCond %{HTTPS} =on
-        RewriteRule ^(.*)$ - [env=proto:https]
+        RewriteCond %{HTTP:X-Forwarded-Proto} =http
+        RewriteCond ${DRUPAL_HTTPS} on
+        RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
 
         RewriteCond %{HTTP_HOST} !^www\.(.+)$ [NC]
-        RewriteRule ^(.*)$ %{ENV:proto}://www.%{HTTP_HOST}$1 [R=301,L]
+        RewriteRule ^(.*)$ http://www.%{HTTP_HOST}$1 [R=301,L]
 
         <Directory ${APACHE_DOCROOT}>
                 Options FollowSymLinks
